--- a/styles/components/_home.scss
+++ b/styles/components/_home.scss
@@ -87,45 +87,54 @@ section#home {
     }
 
 }
+@media (max-width: 815px) {
+    .homeRight {
+        .homeImgContainer {
+            top: 35%;
+            left: 0;
+        }
+    }
+}
 
 //media query for lanscape phones and down
 @media (max-width: 480px) {
     #home .wrapper {
         flex-direction: column;
-        .homeLeft {
-            width: 100%;
+    }
+    .homeLeft {
+        width: 100%;
+        text-align: center;
+        h1 {
+            margin-bottom: 0;
+            font-size: 3.6rem;
+        }
+        .descHead {
+            margin: 10px auto;
             text-align: center;
-            h1 {
-                margin-bottom: 0;
-            }
-            .descHead {
-                margin: 10px auto;
-                text-align: center;
-            }
-            .buttonWhite {
-                margin: 10px auto;
-            }
         }
-        .homeLeft::after {
-            content: "";
-            border-color: transparent;
+        .buttonWhite {
+            margin: 10px auto;
         }
-        .homeRight {
-            width: 100%;
-            .homeImgContainer {
-                position: relative;
-                top: 0;
-                left: 0;
-                img {
-                    display: block;
-                    width: 60%;
-                    // margin: 0 auto;
-                }
+    }
+    .homeLeft::after {
+        content: "";
+        border-color: transparent;
+    }
+    .homeRight {
+        width: 100%;
+        .homeImgContainer {
+            position: relative;
+            top: 0;
+            left: 10%;
+            img {
+                display: block;
+                width: 60%;
+                // margin: 0 auto;
             }
         }
-        .homeRight::after {
-            content: "";
-            border-color: transparent;
-        }
+    }
+    .homeRight::after {
+        content: "";
+        border-color: transparent;
     }
 }
