--- a/styles/components/_location.scss
+++ b/styles/components/_location.scss
@@ -13,7 +13,7 @@ section.location {
         }
         h1 {
             color: $textBlack;
-            font-size: 4.8rem;
+            font-size: calc(4.8rem * 1vw);
             border: 2px solid #fff;
             width: 90%;
             padding: 10px 15px;
@@ -67,7 +67,7 @@ section.location {
             font-size: 4rem;
         }
         h1 {
-            font-size: 8rem;
+            font-size: 2vw;
         }
         p {
             font-size: 3rem;
