--- a/styles/components/_home.scss
+++ b/styles/components/_home.scss
@@ -91,7 +91,7 @@ section#home {
     .homeRight {
         .homeImgContainer {
             top: 35%;
-            left: 0;
+            left: -10px;
         }
     }
 }
