--- a/styles/styles.css
+++ b/styles/styles.css
@@ -341,6 +341,10 @@ p.desc {
   .wrapper {
     width: 80%; } }
 
+@media (max-width: 480px) {
+  .wrapper {
+    width: 95%; } }
+
 html {
   font-size: 62.5%; }
 
@@ -580,7 +584,7 @@ section#home {
 @media (max-width: 815px) {
   .homeRight .homeImgContainer {
     top: 35%;
-    left: 0; } }
+    left: -10px; } }
 
 @media (max-width: 480px) {
   #home .wrapper {
@@ -1006,11 +1010,8 @@ section.team {
     align-items: center; }
     section.team .greenSection .wrapper .iconCards .card {
       width: 50%; }
-      section.team .greenSection .wrapper .iconCards .card .cardImg {
-        border: 1px solid green; }
-        section.team .greenSection .wrapper .iconCards .card .cardImg img {
-          width: 100%;
-          border: 2px solid pink; }
+      section.team .greenSection .wrapper .iconCards .card .cardImg img {
+        width: 100%; }
       section.team .greenSection .wrapper .iconCards .card .cardBottom .buttonWhite {
         margin-top: 10px;
         padding: 5px 10px;
@@ -1173,8 +1174,8 @@ section#blog {
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -ms-flex-flow: row nowrap;
-  flex-flow: row nowrap;
+  -ms-flex-flow: row wrap;
+  flex-flow: row wrap;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between; }
@@ -1323,20 +1324,19 @@ section.location {
     padding: 5% 0;
     text-align: center;
     position: relative; }
-    section.location .sectionTop h4 {
+    section.location .sectionTop .wrapper h4 {
       color: #fff;
-      font-size: 2.4rem;
+      font-size: calc(1rem + 1.6vw);
       margin: 0; }
-    section.location .sectionTop h1 {
+    section.location .sectionTop .wrapper h1 {
       color: #343434;
-      font-size: calc(4.8rem * 1vw);
-      border: 2px solid #fff;
-      width: 90%;
-      padding: 10px 15px;
+      font-size: calc(1rem + 3.6vw);
+      border: 0.5vw solid #fff;
+      padding: 10px 5rem;
       margin: 5px auto; }
-    section.location .sectionTop p {
+    section.location .sectionTop .wrapper p {
       color: #343434;
-      font-size: 1.8rem;
+      font-size: calc(1rem + 1vw);
       font-weight: 300;
       text-transform: capitalize;
       margin: 5px; }
@@ -1367,14 +1367,6 @@ section.location {
     section.location .sectionBottom img {
       width: 100%;
       display: block; }
-
-@media (min-width: 1280px) and (max-width: 1920px) {
-  section.location .sectionTop .wrapper h4 {
-    font-size: 4rem; }
-  section.location .sectionTop .wrapper h1 {
-    font-size: 2vw; }
-  section.location .sectionTop .wrapper p {
-    font-size: 3rem; } }
 
 section#contact {
   background: #1F1F1F; }
@@ -1408,6 +1400,9 @@ section#contact {
       margin: 10px auto;
       background: transparent;
       color: #fff; }
+    section#contact form .buttonWhite:hover {
+      background: #fff;
+      color: #343434; }
 
 @media (min-width: 1280px) and (max-width: 1920px) {
   section#contact form input:not(:last-of-type),
@@ -1417,6 +1412,10 @@ section#contact {
   section#contact form .buttonWhite:hover {
     background: #fff;
     color: #343434; } }
+
+@media (max-width: 815px) {
+  section#contact form {
+    width: 70%; } }
 
 .footerTop {
   background: -webkit-gradient(linear, left top, right top, color-stop(50%, #FCFCFC), color-stop(50%, #F7F7F7));
@@ -1498,6 +1497,9 @@ section#contact {
           text-transform: uppercase;
           color: #FA7072;
           padding: 5px; }
+        .footerTop .footerContainer .footerFourth form input[type=submit]:hover {
+          background: #FA7072;
+          color: #fff; }
 
 .footerCopy {
   background: #1F1F1F;
@@ -1520,3 +1522,30 @@ section#contact {
       font-size: 1.2rem; }
   .footerCopy {
     font-size: 1.3rem; } }
+
+@media (max-width: 1000px) {
+  /* breakpoint */
+  .footerTop .footerContainer {
+    width: 80%; } }
+
+@media (max-width: 815px) {
+  .footerTop .footerContainer .footerFourth {
+    width: calc(50% - 10px);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: column nowrap;
+    flex-flow: column nowrap;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center; } }
+
+@media (max-width: 480px) {
+  .footerTop .footerContainer {
+    width: 80%; }
+    .footerTop .footerContainer .footerFourth {
+      width: 100%; }
+      .footerTop .footerContainer .footerFourth p {
+        font-size: 1.2rem; } }
