--- a/styles/components/_about.scss
+++ b/styles/components/_about.scss
@@ -70,8 +70,39 @@ section#about {
             flex-direction: column;
             align-items: center;
             .iconBlock {
-                width: 80%;
+                width: 60%;
                 margin-bottom: 15px;
+                p {
+                    font-size: 1.4rem;
+                }
+            }
+        }
+        .iconBlockContainer .first {
+            align-self: flex-start;
+            position: relative;
+            &::after {
+                content: "";
+                display: inline-block;
+                height: 1px;
+                width: 60%;
+                border-bottom: 2px dashed $pGrey;
+                position: absolute;
+                top: 50%;
+                left: 90%;
+            }
+        }
+        .iconBlockContainer .third {
+            align-self: flex-end;
+            position: relative;
+            &::after {
+                content: "";
+                display: inline-block;
+                height: 1px;
+                width: 60%;
+                border-bottom: 2px dashed $pGrey;
+                position: absolute;
+                top: 50%;
+                right: 90%;
             }
         }
     }
