--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1118,7 +1118,9 @@ section#portfolio {
       width: 25%; }
       section#portfolio .portfolioGallery .galleryItem img {
         width: 100%;
-        display: block; }
+        display: block;
+        position: relative;
+        z-index: 1; }
       section#portfolio .portfolioGallery .galleryItem figcaption {
         display: block;
         background: #fff;
@@ -1144,7 +1146,7 @@ section#portfolio {
     section#portfolio .portfolioGallery .galleryItem:hover img {
       -webkit-animation: spinPic 0.7s forwards;
       animation: spinPic 0.7s forwards;
-      z-index: 10; }
+      z-index: 100; }
   section#portfolio .portfolioBottom {
     width: 61%;
     margin: 0 auto;
